--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,20 @@
-<select [(ngModel)]="selectedPage">
-  <option value="boucle">Boucle</option>
-  <option value="template">Template</option>
-  <option value="todo">Todo List</option>
-  
-</select>
-
-<app-boucle *ngIf="selectedPage === 'boucle'"></app-boucle>
-
-<app-template *ngIf="selectedPage ==='template'"></app-template>
-
-<app-todo *ngIf="selectedPage === 'todo'"></app-todo>
-
-<app-todo-second *ngIf="selectedPage === 'todo-second'"></app-todo-second>
+<nav>
+    <ul>
+        <li>
+            <a routerLink='/boucle' routerLinkActive='active'>Boucle</a>
+        </li>
+        <li>
+            <a routerLink='/template' routerLinkActive='active'>template</a>
+        </li>
+        <li>
+            <a routerLink='/todo' routerLinkActive='active'>Todo</a>
+        </li>
+        <li>
+            <a routerLink='/todo-second' routerLinkActive='active'>Todo second </a>
+        </li>
+        <li>
+            <a routerLink="/chien" routerLinkActive='active'>Chiens</a>
+        </li>
+    </ul>
+</nav>
+<router-outlet> </router-outlet>
